--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -51,5 +51,8 @@ $nav-height: 60px;
         margin-top: 0;
         min-height: 100vh;
     }
+    .navBar {
+        display: none;
+    }
 }
 
